apps/helloworld/helloworld-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: hello-world
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: v0.13.0
    istio-injection: enabled
  name: hello-world
