apps/helloworld/helloworld-nginx.yaml
---
kind: Service
apiVersion: v1
metadata:
  namespace: hello-world
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hello-world
  name: nginx-v1
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
        - name: nginx
          image: nginx:1.15.12-alpine
          ports:
            - containerPort: 80
---
