apps/helloworld/helloworld-v1.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hello-world
  name: helloworld-v1
  labels:
    app: helloworld
spec:
  ports:
    - port: 5000
      name: http
  selector:
    app: helloworld
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hello-world
  name: helloworld-v1
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: helloworld
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
        version: v1
    spec:
      containers:
        - name: helloworld
          image: istio/examples-helloworld-v1
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "128Mi"
              cpu: "100m"
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 5000
---
