apps/helloworld/helloworld-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: hello-world
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "licenta.utm"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: hello-world
  name: helloworld
spec:
  hosts:
    - "*"
  gateways:
    - helloworld-gateway
  http:
    - match:
        - uri:
            exact: /api
      rewrite:
        uri: "/hello"
      route:
        - destination:
            host: helloworld-v1
            port:
              number: 5000
